webconfig: Fix box shadow in dark mode
This changed from a separate div to directly on the body

--- a/share/tools/web_config/fishconfig.css
+++ b/share/tools/web_config/fishconfig.css
@@ -632,7 +632,7 @@ img.delete_icon {
         color: #DDD;
     }
 
-    div#ancestor {
+    #ancestor {
         box-shadow: 0 0 5px 1px #000;
     }
     .tab {
